Fix spacing, logo size and reposonsize css

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -1,6 +1,6 @@
 footer {
   background-color: #f2f2f2;
-  padding: $base;
+  padding: $large;
   display: flex;
 }
 .footer-root {
@@ -10,6 +10,8 @@ footer {
 .grin-logo-footer {
   height: 64px;
   display: flex;
+  position: relative;
+  top: -$tiny;
 }
 .footer-section {
   min-width: 150px;
@@ -33,7 +35,7 @@ footer {
 
 @media (max-width: 768px) {
   footer {
-    padding: 14px $base $base $base;
+    padding: $base;
   }
   .footer-root {
     flex-direction: column;
